# openmax-clustering

./: LICENSE  README.md  environment-new.yaml  environment.yaml  environment.yml  flake.nix  notes.md  params.yaml  params_base.yaml  params_cluster.yaml  params_feature_cluster.yaml  params_input_cluster.yaml  pyproject.toml  result  setup.py
.virtual_documents/: plots.ipynb
configs/: params_base.yaml  params_feature_cluster.yaml  params_input_cluster.yaml  params_input_feature_cluster.yaml
data/: unpack.py
experiment_data/: oscr_data_base_1_-1_ABS_REV_ACTV.pkl  oscr_data_base_1_-1_Original.pkl  oscr_data_base_1_10_ABS_REV_ACTV.pkl  oscr_data_base_1_10_Original.pkl  oscr_data_base_1_10_VALUE_SHIFT.pkl  oscr_data_base_1_1_-1_Original.pkl  oscr_data_base_1_1_-1_Original_N-CLASSES.pkl  oscr_data_base_1_1_-1_Original_WEIGHTS.pkl  oscr_data_base_1_1_-1_VALUE_SHIFT_N-CLASSES.pkl  oscr_data_base_1_1_7_ABS_REV_ACTV_WEIGHTS.pkl  oscr_data_base_1_1_7_Original_WEIGHTS.pkl  oscr_data_base_1_1_7_VALUE_SHIFT_WEIGHTS.pkl  oscr_data_base_1_3_ABS_REC_ACTV.pkl  oscr_data_base_1_3_ABS_REV_ACTV.pkl  oscr_data_base_1_3_ORGINAL.pkl  oscr_data_base_1_3_ORIGINAL.pkl  oscr_data_base_1_3_Original.pkl  oscr_data_base_1_3_VALUE_SHIFT.pkl  oscr_data_base_1_5_ABS_REC_ACTV.pkl  oscr_data_base_1_5_ABS_REV_ACTV.pkl  oscr_data_base_1_5_ORGINAL.pkl  oscr_data_base_1_5_ORIGINAL.pkl  oscr_data_base_1_5_Original.pkl  oscr_data_base_1_5_VALUE_SHIFT.pkl  oscr_data_base_1_7_Original.pkl  oscr_data_base_1_8_ABS_REC_ACTV.pkl  oscr_data_base_1_8_ABS_REV_ACTV.pkl  oscr_data_base_1_8_ORGINAL.pkl  oscr_data_base_1_8_ORIGINAL.pkl  oscr_data_base_1_8_Original.pkl  (+41 more)
(+4707 files in other folders)
