[tool.poetry]
name = "openmax"
version = "0.1.0"
description = "Bachelor Thesis: OpenMax"
authors = ["Dennys Huber <dennys.huber@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
numpy = "^1.25.1"
matplotlib = "^3.5.2"
contourpy = "1.0.7"
vast = {git = "https://github.com/Vastlab/vast.git"}
setuptools = "^68.0.0"
pyyaml = "^6.0.1"
loguru = "^0.7.0"

[tool.poetry.scripts]
openmax = "openmax:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
