[tool.poetry]
name = "openmax"
version = "0.1.0"
description = "Bachelor Thesis: OpenMax"
authors = ["Dennys Huber <dennys.huber@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
loguru = "^0.7.0"
pyyaml = "^6.0.1"
vast = {git = "https://github.com/Vastlab/vast.git"}
contourpy = "1.0.4"
scikit-learn = "^1.3.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"

[tool.poetry.scripts]
openmax = "openmax:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
